Icon input, finish buttons css and whitespace issue and all that will be left is tweaking navbar and graphs

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,14 @@ body {
   background-image: linear-gradient(to right, #be93c5, #005aa7);
 }
 
+.button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: black;
+}
 /* ----------------- NAVBAR ----------------- */
 
 .navbar button {
